Resolve layer swithching on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -175,7 +175,7 @@ md-tabs md-ink-bar {
       font-weight: bolder;
       text-transform: uppercase;
       margin: 8px 0;
-      transition: 0.3s; }
+      transition: 0.2s; }
 
 .legends-holder {
   position: absolute;
